# merit_badge_python_example

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
src/merit_badge/: __init__.py  example.py
tests/: test_example.py
